# ImageSearch

./: .gitignore  README.md  client_secrets.json  pyproject.toml
backend/app/: aws_utilities.py  database_util.py  google_utilities.py  image_processor.py  main.py  readme.md  search_engine.py  util.py
chroma_data/: chroma.sqlite3
frontend/src/: app.py
frontend_old/: package.json
frontend_old/public/: index.html
frontend_old/src/: App.css  App.js
frontend_old/src/components/: ImageGallery.js  SearchBar.js  UploadForm.js
