[tool.poetry]
name = "imagesearch"
version = "0.1.0"
description = ""
authors = ["Upa Gupta <upagupta2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
python-multipart = "^0.0.17"
pillow = "^11.0.0"
requests = "^2.32.3"
numpy = "^2.1.3"
python-dotenv = "^1.0.1"
uvicorn = "^0.32.0"
datasets = "^3.1.0"
clickhouse-connect = "^0.8.6"
transformers = "^4.46.2"
torch = "^2.5.1"
tqdm = "^4.67.0"
chromadb = "^0.5.18"
google-api-python-client = "^2.151.0"
google-auth-httplib2 = "^0.2.0"
google-auth-oauthlib = "^1.2.1"
aiosqlite = "^0.19.0"
boto3 = "^1.35.60"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
pytest = "^8.3.3"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
